--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1033,8 +1033,17 @@ select {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .-mt-px {
   margin-top: -1px;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .block {
   display: block;
